Cleaning Up docs and tests